languages/montiarc-fe/src/test/resources/arc4/coco/invalid/ConnectorPiercingOutwardsThroughInterface.arc
package invalid;

component ConnectorPiercingOutwardsThroughInterface {
  component A {
    component Inner {
      port out String innerOut;
    }
  }
  
  component B {
    port in String bIn;
  }
  
  connect a.inner.innerOut -> b.bIn; 
}